--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                     <a class="linkA" href="">Home</a>
                 </li>
                 <li>
-                    <a href="">About us</a>
+                    <a href="#">About us</a>
                 </li>
                 <li>
-                    <a href="">Services</a>
+                    <a href="#">Services</a>
                 </li>
                 <li>
-                    <a href="">Blog</a>
+                    <a href="#">Blog</a>
                 </li>
                 <li>
                     <a class="linkB" href="">Contact us</a>
@@ -38,7 +38,7 @@
                 <h2>Experienced <span>mobile and web </span>applications and website builders measuring.</h2>
                 <p>KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web applications and website builders
                     measuring dozens of completed projects. We build and develop mobile applications for several top
-                    platforms, <br> including Android & IOS. </p>
+                    platforms, including Android & IOS. </p>
 
                 <a class="linkB" href="">contact us</a>  <a class="linkC" href="">View more</a>
             </div>
@@ -115,8 +115,8 @@
         <section class="s4">
             <h2>Lorem Ipsum is simply dummy text of the printing. </h2>
             <form action="#">
-                <input type="email">
-                <input type="submit">
+                <input class="email" type="email">
+                <input class="enviar" type="submit">
             </form>
         </section>
 
